--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: "404"
+permalink: /404
 ---
 <h1>404</h1>
 <p>There doesn't appear to be anything here. Sorry about that.</p>
